fixed weather display format on mobile

--- a/style.css
+++ b/style.css
@@ -136,4 +136,32 @@ html, body {
     overflow-x: hidden;
 }
 
+.finalDisplay {
+    width: 300px;
+    height: 300px;
+}
+
+.name, .all-degrees, .current, .daily, .hourly, .feelsLike, .humidity, .wind {
+    font-size: 20px;
+}
+
+.all-degrees {
+    column-gap: 25px;
+}
+
+.current {
+    width: 70px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.hourly, .daily {
+    padding: 0;
+}
+.daily {
+    margin-left: 8px;
+}
+
+
+
 }
